--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
   "devDependencies": {
     "gh-pages": "^2.2.0"
   },
-  "homepage": "http://karenying.github.io/"
+  "homepage": "http://karenying.github.io/karenying.com"
 }
