Try changing build

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "react-scripts build && echo '/* /index.html  200' | cat >build/_redirects",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
@@ -41,6 +41,5 @@
     },
     "devDependencies": {
         "gh-pages": "^2.2.0"
-    },
-    "homepage": "http://karenying.github.io"
+    }
 }
