--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "karenying.com",
-    "name": "Personal site",
+    "name": "Personal/portfolio site of Karen Ying.",
     "icons": [
         {
             "src": "favicon.ico",
