--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-progressive-image": "^0.6.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "serialize-javascript": "^4.0.0",
     "yarn": "^1.22.4"
   },
   "scripts": {
