--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
   },
   "devDependencies": {
     "gh-pages": "^2.2.0"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
